--- a/fixtures/vcr_cassettes/Accept_credit_card_payments_during_signup/Bad_credit_card_details/_4242424242424242_123_12_1970_Card_expiry_year_.yml
+++ b/fixtures/vcr_cassettes/Accept_credit_card_payments_during_signup/Bad_credit_card_details/_4242424242424242_123_12_1970_Card_expiry_year_.yml
@@ -5,7 +5,7 @@ http_interactions:
     uri: https://api.stripe.com/v1/customers
     body:
       encoding: US-ASCII
-      string: card[exp_month]=12&card[exp_year]=1970&card[number]=4242424242424242&card[cvc]=123&plan=corporate_supporter_annual&description=FooBar%20Inc%20%20membership%20(SH8456ER)
+      string: card[exp_month]=12&card[exp_year]=1970&card[number]=4242424242424242&card[cvc]=123&plan=corporate_supporter_annual&description=FooBar%20Inc%20corporate%20supporter%20membership%20(XN4415QD)
     headers:
       Accept:
       - ! '*/*; q=0.5, application/xml'
@@ -22,7 +22,7 @@ http_interactions:
         Agrajag.local 13.2.0 Darwin Kernel Version 13.2.0: Thu Apr 17 23:03:13 PDT
         2014; root:xnu-2422.100.13~1/RELEASE_X86_64 x86_64"}'
       Content-Length:
-      - '168'
+      - '189'
   response:
     status:
       code: 402
@@ -31,19 +31,19 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Wed, 11 Jun 2014 15:50:24 GMT
+      - Mon, 16 Jun 2014 14:55:53 GMT
       Content-Type:
       - application/json;charset=utf-8
       Content-Length:
       - '164'
-      Access-Control-Allow-Methods:
-      - GET, POST, HEAD, OPTIONS, DELETE
-      Access-Control-Max-Age:
-      - '300'
       Cache-Control:
       - no-cache, no-store
+      Access-Control-Max-Age:
+      - '300'
+      Access-Control-Allow-Methods:
+      - GET, POST, HEAD, OPTIONS, DELETE
       Access-Control-Allow-Credentials:
-      - <SKIP_RAILS_ADMIN_INITIALIZER>
+      - 'true'
       Stripe-Version:
       - '2014-05-19'
       Strict-Transport-Security:
@@ -54,5 +54,5 @@ http_interactions:
         is invalid.\",\n    \"type\": \"card_error\",\n    \"param\": \"exp_year\",\n
         \   \"code\": \"invalid_expiry_year\"\n  }\n}\n"
     http_version: 
-  recorded_at: Wed, 11 Jun 2014 15:50:24 GMT
+  recorded_at: Mon, 16 Jun 2014 14:55:53 GMT
 recorded_with: VCR 2.9.2
