--- a/fixtures/vcr_cassettes/Accept_credit_card_payments_during_signup/Bad_credit_card_details/_4242424242424242_1_12_2016_Card_validation_code_.yml
+++ b/fixtures/vcr_cassettes/Accept_credit_card_payments_during_signup/Bad_credit_card_details/_4242424242424242_1_12_2016_Card_validation_code_.yml
@@ -5,7 +5,7 @@ http_interactions:
     uri: https://api.stripe.com/v1/customers
     body:
       encoding: US-ASCII
-      string: card[exp_month]=12&card[exp_year]=2016&card[number]=4242424242424242&card[cvc]=1&plan=corporate_supporter_annual&description=FooBar%20Inc%20%20membership%20(UP4517FR)
+      string: card[exp_month]=12&card[exp_year]=2016&card[number]=4242424242424242&card[cvc]=1&plan=corporate_supporter_annual&description=FooBar%20Inc%20corporate%20supporter%20membership%20(VD2816YC)
     headers:
       Accept:
       - ! '*/*; q=0.5, application/xml'
@@ -22,7 +22,7 @@ http_interactions:
         Agrajag.local 13.2.0 Darwin Kernel Version 13.2.0: Thu Apr 17 23:03:13 PDT
         2014; root:xnu-2422.100.13~1/RELEASE_X86_64 x86_64"}'
       Content-Length:
-      - '166'
+      - '187'
   response:
     status:
       code: 402
@@ -31,7 +31,7 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Wed, 11 Jun 2014 15:50:26 GMT
+      - Mon, 16 Jun 2014 14:55:55 GMT
       Content-Type:
       - application/json;charset=utf-8
       Content-Length:
@@ -40,12 +40,12 @@ http_interactions:
       - no-cache, no-store
       Stripe-Version:
       - '2014-05-19'
+      Access-Control-Allow-Credentials:
+      - 'true'
       Access-Control-Max-Age:
       - '300'
       Access-Control-Allow-Methods:
       - GET, POST, HEAD, OPTIONS, DELETE
-      Access-Control-Allow-Credentials:
-      - <SKIP_RAILS_ADMIN_INITIALIZER>
       Strict-Transport-Security:
       - max-age=31556926; includeSubDomains
     body:
@@ -54,5 +54,5 @@ http_interactions:
         invalid.\",\n    \"type\": \"card_error\",\n    \"param\": \"cvc\",\n    \"code\":
         \"invalid_cvc\"\n  }\n}\n"
     http_version: 
-  recorded_at: Wed, 11 Jun 2014 15:50:26 GMT
+  recorded_at: Mon, 16 Jun 2014 14:55:54 GMT
 recorded_with: VCR 2.9.2
